--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="tech-grid">
 
     <div class="tools">
-        <img src="img/Power BI.png BI.png" alt="Power BI">
+        <img src="img/PowerBI.png" alt="Power BI">
         <span>Power BI</span>
     </div>
 
@@ -133,7 +133,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Elena Guiñón | Portafolio Personal</p>
+        <p>© 2025 Elena Guiñón | Portafolio Personal</p>
     </footer>
 
 </body>
